# fabi386

./: .gitignore  AGENTS.md  MEMORY.md  Makefile  README.md  f386.qpf  f386.qsf  f386.sdc  f386_mister.qpf  f386_mister.qsf  f386_sv2v.qpf  f386_sv2v.qsf  f386_sv2v_fast.qpf  f386_sv2v_fast.qsf  files.qip
asm/: bin_to_hex.py  diagnostic.asm  diagnostic.hex
bench/formal/: Makefile  f386_alu.sby  f386_alu_props.sv  f386_lsq.sby  f386_lsq_props.sv  f386_rob.sby  f386_rob_props.sv  f386_seg_cache.sby  f386_seg_cache_props.sv  f386_tlb.sby  f386_tlb_props.sv
bench/verilator/: CMakeLists.txt  Makefile  Verilator.cmake  ddram_burst_smoke.sv  dtlb_frontend_tb.sv  l2_sp_tb.sv  memory_model.h  microcode_seq_tb.sv  page_walker_tb.sv  shim_flush_race_tb.sv  tb_ooo_core.cpp  test_alu_basic.cpp  test_bios_rom_smoke.cpp  test_branch.cpp  test_dtlb_frontend.cpp  test_l2_sp.cpp  test_microcode_seq.cpp  test_ooo_core_alu.cpp  test_ooo_core_boot_integration.cpp  test_ooo_core_tlb.cpp  test_ooo_core_ucode.cpp  test_ooo_core_ucode_mem.cpp  test_page_walker.cpp  test_shim_flush_race.cpp
docker/: Dockerfile
docs/: de10_mem_fabric_smoke.md  debug_bridge_specification.md  debug_introspection_protocol.md  etx_display_engine_architecture.md  etx_text_engine_design_document.md  fpga_resource_budget.md  implementation_tracker.md  instruction_frequency_analysis.md  isa_coverage_analysis.md  microcode_rom_analysis.md  missing_resource_budget_2026-03-15.md  msr_specification.md  neo_supervisor_utility.md  p2_baseline_performance.md  p2_closeout.md  p2_memory_integration_plan.md  p3_scope.md  project_directory_structure.md  quartus_17_rationale.md  quartus_nas_build.md  reference_cross_analysis.md  rtl_vs_docs_audit.md  semantic_detection_analysis.md  shadow_packing_pasc_mockups.md  supervisor_runtime_instrumentation.md  synthesis_history.csv  target_platform_mister.md  timing_verification_summary.md  v86_workload_analysis.md  yosys_resource_history.csv
rtl/core/: f386_agu.sv  f386_alu.v  f386_alu_bitcount.sv  f386_alu_simd.sv  f386_branch_predict.sv  f386_branch_predict_gshare.sv  f386_branch_predict_hybrid.sv  f386_cpuid.sv  f386_decode.sv  f386_decode_cache.sv  f386_dispatch.sv  f386_divider.sv  f386_exception_unit.sv  f386_execute_stage.sv  f386_fetch_fifo.sv  f386_fpu_spatial.v  f386_ftq.sv  f386_issue_queue.sv  f386_lsq.sv  f386_mem_dep_predictor.sv  f386_microcode_defs.svh  f386_microcode_rom.sv  f386_microcode_rom_gen.sv  f386_microcode_sequencer.sv  f386_msr_file.sv  f386_multiplier.sv  f386_ooo_core_top.sv  f386_phys_regfile.sv  f386_pipeline_top.sv  f386_prefetch_unit.sv  f386_producer_matrix.sv  f386_ras_unit.sv  f386_ready_bit_table.sv  f386_register_rename.sv  f386_rename_busytable.sv  f386_rename_freelist.sv  f386_rename_maptable.sv  f386_rob.sv  f386_seg_cache.sv  f386_semantic_logger.sv  (+6 more)
rtl/memory/: f386_dcache.sv  f386_dcache_mshr.sv  f386_ddram_bios_mux.sv  f386_dtlb_frontend.sv  f386_l2_cache.sv  f386_l2_cache_sp.sv  f386_lsq_to_memctrl_shim.sv  f386_mem_req_arbiter.sv  f386_mem_sys_to_ddram.sv  f386_mmio_io_path.sv  f386_mmu_remap.sv  f386_mmu_remap_gates.sv  f386_page_walker.sv  f386_tlb.sv  f386_tlb_flush.sv
rtl/primitives/: f386_block_ram.sv  f386_bram_sdp.v  f386_distributed_ram.sv  f386_freelist_multiwidth.sv  f386_picker.sv
rtl/soc/: f386_aar_engine.sv  f386_address_classifier.sv  f386_bios_rom.sv  f386_console_port.sv  f386_debug_unit.sv  f386_dma_stub.sv  f386_etx_blit_engine.sv  f386_etx_cmd_decoder.sv  f386_etx_cursor_overlay.sv  f386_etx_engine.sv  f386_etx_glyph_cache.sv  f386_etx_line_buffer.sv  f386_etx_mem_hub.sv  f386_etx_regs.sv  f386_etx_scanout_pipe.sv  f386_etx_tile_tracker.sv  f386_guard_unit.sv  f386_hw_watchdog.sv  f386_ide_dma.sv  f386_iobus.sv  f386_pasc_classifier.sv  f386_pic.sv  f386_pit.sv  f386_ps2.sv  f386_rtc_stub.sv  f386_semantic_tagger.sv  f386_shadow_stack.sv  f386_snoop_engine.sv  f386_stride_detector.sv  f386_telemetry_dma.sv  f386_v86_monitor.sv  f386_vbe_accel.sv  f386_vga.sv
rtl/top/: f386_conf_str.sv  f386_emu.sv  f386_mem_ctrl.sv  f386_pkg.sv  f386_pll.sv
scripts/: quartus_backend_nas.sh  quartus_backend_vm.sh  quartus_synth_check.sh  regression_l2_sp.sh  setup_quartus_vm.sh  yosys_resource_check.sh
scripts/microcode/: arith_ops.us  bcd_ops.us  bit_ops.us  boot_ops.us  micro_op_defs.py  microcode_compiler.py  misc_ops.us  seg_ops.us  string_ops.us
sw/bios/: f386_umb_extension.asm
sys/: README.md  sys_top.v
web/: index.html
